--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
     "type": "git",
     "url": "git+https://github.com/PonomareVlad/PonomareVlad.github.io.git"
   },
-  "author": "PonomareVlad"
+  "author": "PonomareVlad",
+  "dependencies": {}
 }
